[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/AnimSceneDebugger.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DebugFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/SM256 menu font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scene/Char Screens Panel.gd" type="Script" id=4]
[ext_resource path="res://Scene/Graph Edit Popup.gd" type="Script" id=5]
[ext_resource path="res://UI/Animation Editor.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]

bg_color = Color( 0.6, 0.6, 0.6, 0.2 )
corner_detail = 10

[node name="AnimSceneDebugger" type="CanvasLayer"]
layer = 128
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TopHBox" type="HBoxContainer" parent="Margin"]
editor/display_folded = true
margin_left = 10.0
margin_top = 10.0
margin_right = 950.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_vertical = 0
alignment = 1

[node name="FPS" type="Label" parent="Margin/TopHBox"]
margin_left = 166.0
margin_right = 310.0
margin_bottom = 24.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 2 )
text = "fps: xxx.x"

[node name="GSpeed" type="Label" parent="Margin/TopHBox"]
margin_left = 344.0
margin_right = 594.0
margin_bottom = 24.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "Game Speed: x1.00"

[node name="HSlider" type="HSlider" parent="Margin/TopHBox"]
margin_left = 628.0
margin_right = 828.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 19
ticks_on_borders = true

[node name="Color Panel" type="PanelContainer" parent="Margin"]
editor/display_folded = true
margin_left = 10.0
margin_top = 193.0
margin_right = 388.0
margin_bottom = 527.0
rect_min_size = Vector2( 378, 0 )
size_flags_horizontal = 0
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0

[node name="VBox" type="VBoxContainer" parent="Margin/Color Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 371.0
margin_bottom = 327.0

[node name="Char Palette Label" type="Label" parent="Margin/Color Panel/VBox"]
margin_right = 364.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "Character Palette"
align = 1
max_lines_visible = 1

[node name="Scroll" type="ScrollContainer" parent="Margin/Color Panel/VBox"]
margin_top = 20.0
margin_right = 364.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 300 )
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="Margin" type="MarginContainer" parent="Margin/Color Panel/VBox/Scroll"]
margin_right = 20.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Grid" type="GridContainer" parent="Margin/Color Panel/VBox/Scroll/Margin"]
margin_left = 10.0
margin_right = 10.0
custom_constants/vseparation = 14
custom_constants/hseparation = 20
columns = 2

[node name="BottomHBox" type="HBoxContainer" parent="Margin"]
editor/display_folded = true
visible = false
margin_left = 10.0
margin_top = 690.0
margin_right = 950.0
margin_bottom = 710.0
mouse_filter = 2
size_flags_vertical = 8
alignment = 1

[node name="Show Graph" type="Button" parent="Margin/BottomHBox"]
margin_left = 377.0
margin_right = 562.0
margin_bottom = 20.0
size_flags_horizontal = 6
toggle_mode = true
pressed = true
text = "Show Animation Edit Graph"

[node name="AnimTime" type="Label" parent="."]
visible = false
margin_left = 169.0
margin_top = 1.0
margin_right = 265.0
margin_bottom = 31.0

[node name="PlayButton" type="TextureButton" parent="."]
visible = false
margin_left = 5.0
margin_top = 35.0
margin_right = 45.0
margin_bottom = 75.0

[node name="PauseButton" type="TextureButton" parent="."]
visible = false
margin_left = 5.0
margin_top = 35.0
margin_right = 45.0
margin_bottom = 75.0

[node name="Debug Buttons" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 50.0
custom_constants/separation = 8

[node name="Hide-Show Debugger" type="Button" parent="Debug Buttons"]
margin_right = 127.0
margin_bottom = 20.0
size_flags_horizontal = 2
size_flags_vertical = 0
toggle_mode = true
pressed = true
text = "Hide Debug Menu"

[node name="Other D Buttons" type="VBoxContainer" parent="Debug Buttons"]
margin_top = 28.0
margin_right = 130.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Reset" type="Button" parent="Debug Buttons/Other D Buttons"]
margin_right = 130.0
margin_bottom = 20.0
size_flags_horizontal = 11
text = "Reset Animation"

[node name="Char Screens Panel" type="PanelContainer" parent="."]
margin_left = 609.0
margin_top = 251.0
margin_right = 959.0
margin_bottom = 523.0
script = ExtResource( 4 )

[node name="VBox0" type="VBoxContainer" parent="Char Screens Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 293.0

[node name="Label" type="Label" parent="Char Screens Panel/VBox0"]
margin_right = 336.0
margin_bottom = 16.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Character Screens"

[node name="Add Screen Button" type="Button" parent="Char Screens Panel/VBox0"]
margin_top = 20.0
margin_right = 336.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "Add new screen"

[node name="VBox1" type="VBoxContainer" parent="Char Screens Panel/VBox0"]
margin_top = 46.0
margin_right = 336.0
margin_bottom = 286.0

[node name="Tabs" type="Tabs" parent="Char Screens Panel/VBox0/VBox1"]
margin_right = 336.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
tab_align = 0

[node name="Screen Panel" type="PanelContainer" parent="Char Screens Panel/VBox0/VBox1"]
margin_top = 27.0
margin_right = 336.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox2" type="VBoxContainer" parent="Char Screens Panel/VBox0/VBox1/Screen Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 329.0
margin_bottom = 206.0

[node name="Remove Screen Button" type="Button" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2"]
margin_right = 322.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Remove screen"

[node name="Label" type="Label" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2"]
margin_top = 26.0
margin_right = 322.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "Character:"
valign = 1

[node name="Char List" type="MenuButton" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2"]
margin_top = 46.0
margin_right = 322.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 45 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
disabled = true
flat = false
clip_text = true

[node name="HBox Pos" type="HBoxContainer" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2"]
margin_top = 95.0
margin_right = 322.0
margin_bottom = 119.0

[node name="X Label" type="Label" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Pos"]
margin_top = 4.0
margin_right = 59.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "pos X:"
valign = 1

[node name="X SpinBox" type="SpinBox" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Pos"]
margin_left = 63.0
margin_right = 137.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -960.0
max_value = 960.0
step = 0.1

[node name="VSeparator" type="VSeparator" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Pos"]
margin_left = 141.0
margin_right = 183.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Y Label" type="Label" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Pos"]
margin_left = 187.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "pos Y:"
valign = 1

[node name="Y SpinBox" type="SpinBox" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Pos"]
margin_left = 248.0
margin_right = 322.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -720.0
max_value = 720.0
step = 0.1

[node name="HBox Scale" type="HBoxContainer" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2"]
margin_top = 123.0
margin_right = 322.0
margin_bottom = 147.0

[node name="X Label" type="Label" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Scale"]
margin_top = 4.0
margin_right = 78.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Scale X:"
valign = 1

[node name="X SpinBox" type="SpinBox" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Scale"]
margin_left = 82.0
margin_right = 156.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -2.0
max_value = 2.0
step = 0.1
value = 1.0
prefix = "x"

[node name="VSeparator" type="VSeparator" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Scale"]
margin_left = 160.0
margin_right = 164.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Y Label" type="Label" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Scale"]
margin_left = 168.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Scale Y:"
valign = 1

[node name="Y SpinBox" type="SpinBox" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Scale"]
margin_left = 248.0
margin_right = 322.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -2.0
max_value = 2.0
step = 0.1
value = 1.0
prefix = "x"

[node name="HBoxContainer" type="HBoxContainer" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2"]
margin_top = 151.0
margin_right = 322.0
margin_bottom = 173.0

[node name="Play Screen" type="Button" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBoxContainer"]
margin_right = 159.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="Pause Screen2" type="Button" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBoxContainer"]
margin_left = 163.0
margin_right = 322.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Pause"

[node name="Edit Animation Button" type="Button" parent="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2"]
margin_top = 177.0
margin_right = 322.0
margin_bottom = 199.0
custom_fonts/font = ExtResource( 3 )
text = "Edit Animation Tree"

[node name="Graph Edit Popup" type="PopupPanel" parent="."]
margin_left = 5.0
margin_top = 133.0
margin_right = 485.0
margin_bottom = 613.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Graph Edit Popup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Graph Edit Popup/VBoxContainer"]
margin_right = 472.0
margin_bottom = 20.0

[node name="Graph Title" type="Label" parent="Graph Edit Popup/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 448.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "%s Animation Tree"
align = 1

[node name="Close Button" type="Button" parent="Graph Edit Popup/VBoxContainer/HBoxContainer"]
margin_left = 452.0
margin_right = 472.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "X"

[node name="Animation Editor" parent="Graph Edit Popup/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 24.0
margin_right = 472.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="output" parent="Graph Edit Popup/VBoxContainer/Animation Editor" index="1"]
margin_bottom = -264.0

[connection signal="value_changed" from="Margin/TopHBox/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="Debug Buttons/Hide-Show Debugger" to="." method="_on_HideShow_Debugger_toggled"]
[connection signal="tab_changed" from="Char Screens Panel/VBox0/VBox1/Tabs" to="." method="_on_Screen_tab_changed"]
[connection signal="value_changed" from="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Pos/X SpinBox" to="." method="_on_character_screen_placement_change"]
[connection signal="value_changed" from="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Pos/Y SpinBox" to="." method="_on_character_screen_placement_change"]
[connection signal="value_changed" from="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Scale/X SpinBox" to="." method="_on_character_screen_placement_change"]
[connection signal="value_changed" from="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBox Scale/Y SpinBox" to="." method="_on_character_screen_placement_change"]
[connection signal="pressed" from="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/HBoxContainer/Play Screen" to="." method="_on_Play_Screen_pressed"]
[connection signal="pressed" from="Char Screens Panel/VBox0/VBox1/Screen Panel/VBox2/Edit Animation Button" to="." method="_on_Edit_Animation_Button_pressed"]
[connection signal="pressed" from="Graph Edit Popup/VBoxContainer/HBoxContainer/Close Button" to="Graph Edit Popup" method="_on_Close_Button_pressed"]
[connection signal="blend_tree_has_changed" from="Graph Edit Popup/VBoxContainer/Animation Editor" to="." method="_on_Animation_Editor_blend_tree_has_changed"]

[editable path="Graph Edit Popup/VBoxContainer/Animation Editor"]
